--- a/doormat.cabal
+++ b/doormat.cabal
@@ -52,7 +52,7 @@ common basics
     -- Base language which the package is written in.
     default-language: Haskell2010
     build-depends:
-        base ^>= 4.14.3.0
+        base ^>= 4.17.0.0
     ghc-options:
         -threaded
 
@@ -62,9 +62,9 @@ executable doormat
     main-is: Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:
-        Tui
+    other-modules: Tui
         , Titlecard
+        , Pipes
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -77,6 +77,9 @@ executable doormat
         , microlens-mtl
         , mtl
         , vty
+        , random
+        , array
+        , split
         , vector
         , text-zipper
 
@@ -88,7 +91,7 @@ library
     
     default-language: Haskell2010
     build-depends: 
-        base ^>= 4.14.3.0
+        base ^>= 4.17.0.0
         , brick
         , process
         , unix
