Added basic mosh functionality.

--- a/doormat.cabal
+++ b/doormat.cabal
@@ -14,7 +14,7 @@ name:               doormat
 -- PVP summary:      +-+------- breaking API changes
 --                   | | +----- non-breaking API additions
 --                   | | | +--- code changes with no API change
-version:            0.1.1.1
+version:            0.1.2.1
 
 -- A short (one-line) description of the package.
 synopsis:
@@ -24,7 +24,7 @@ synopsis:
 -- description:
 
 -- URL for the project homepage or repository.
-homepage:
+homepage: https://github.com/anthony-darienzo/doormat.hs
 
 -- A URL where users can report bugs.
 -- bug-reports:
@@ -77,6 +77,7 @@ executable doormat
         , microlens-mtl
         , mtl
         , vty
+        , vty-unix
         , random
         , array
         , split
